# freeradius-log-watcher

./: .gitignore  CMakeLists.txt  README.md  cppcheck.sh
cmake/: pch.cmake
src/: CInotify.cpp  CInotify.hpp  CMakeLists.txt  CParser.cpp  CParser.hpp  CWatch.cpp  CWatch.hpp  common.hpp  defines.hpp  event_handler.cpp  event_handler.hpp  main.cpp
